finish grid chexkbox headar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,7 @@
   [rowData]="rowData"
   (gridReady)="onGridReady($event)"
   (selectionChanged)="onSelectionChanged($event)"
+  [rowSelection]="rowSelection"
   class="ag-theme-balham"
   style="width: 1000px; height: 500px"
 >
