--- a/src/app/grid-header-check-box/grid-header-check-box.component.html
+++ b/src/app/grid-header-check-box/grid-header-check-box.component.html
@@ -1,1 +1,3 @@
-<input type="checkbox" (change)="toggle($event)">
+<div class="checkbox-field">
+  <input #checkbox type="checkbox" (change)="toggle($event)">
+</div>
