--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,5 +5,12 @@
 html, body {
   width: 100%;
   height: 100%;
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
+}
+
+h1, h2, h3, p {
+  margin: 0;
+  padding: 0;
 }
